# Aurora-Platform

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  AUDIT_SUMMARY.md  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPROVEMENTS.md  TECHNICAL_MANUAL.md  USER_MANUAL.md  alembic.ini  aurora-deepseek-config.yaml  bandit_report.json  bandit_report_new.json  build.py  check_import.py  check_setup.py  configurar-dns.ps1  conftest.py  debug-poetry.ps1  debug_import.py  diagnose_env.py  docker-compose.yml  eskb-codigos.yaml  eskb-projeto.yaml  fix_tests.py  index.html  inspect_structure.py  install  main.py  modsecurity.conf  mri_report.md  mri_scan.py  nginx.conf  patch_cnpj_adapter.py  (+22 more)
.aurora_eskb/: error_resolution_log.md  features_log.md
.github/workflows/: ci.yml  security-checks.yml  tests.yml
alembic/: env.py
alembic/versions/: cc5588aecd7e_cria_a_tabela_inicial_de_clientes.py
docs/: ROADMAP.md
eskb/: event_log.jsonl
eskb/erros/: log_de_erros.txt
eskb/relatorios/: relatorio_geral.txt
libs/: sentencepiece-0.2.1-cp313-cp313-win_amd64.whl
scripts/: check_dependencies.py  check_environment.py  refactor_box_calls.py  refactor_box_calls_ast.py
scripts/automation/: iniciar_tarefa.py
scripts/dev/: apply-patches.ps1
security/: dependency_updater.py  incident_response_plan.md  penetration_test.py
sentencepiece/: -  build-sentencepiece.ps1  build-sentencepiece.ps1
sentencepiece/python/: setup.py
src/: __init__.py  requirements.txt
src/aurora/: __init__.py  cli.py  config.py  database.py  database_config.py  init_db.py  main.py
src/aurora/ai_core/: __init__.py  data_ingestion.py  feedback_loop.py  knowledge_storage.py
src/aurora/auth/: security.py  two_factor.py
src/aurora/cache/: redis.py  redis_cache.py
src/aurora/core/: ContextEngine.py  context_engine.py
src/aurora/integrations/: azure_keyvault.py  cnpj_adapter.py  cnpj_provider.py  cnpja.py
src/aurora/middleware/: error_handler.py  rate_limiter.py  security.py
src/aurora/models/: __init__.py  base.py  cliente_model.py  cliente_models.py  lead_models.py
src/aurora/repositories/: cliente_repository.py
src/aurora/routers/: __init__.py  auth_router.py  cliente_router.py  cnpj_routes.py  lead_router.py
src/aurora/schemas/: __init__.py  cliente_schemas.py  cnpj_schema.py  lead_schemas.py
src/aurora/services/: __init__.py  cnpj_service.py  servico_crm.py
src/aurora/utils/: exceptions.py  security.py  validators.py
src/aurora_platform/: cli.py  config.py  database.py  main.py
src/aurora_platform/ai_core/: __init__.py  data_ingestion.py  knowledge_storage.py  requirements.txt
src/aurora_platform/auth/: security.py  two_factor.py
src/aurora_platform/cache/: redis.py  redis_cache.py
src/aurora_platform/core/: context_engine.py
src/aurora_platform/integrations/: azure_keyvault.py  cnpj_adapter.py  cnpj_provider.py
src/components/: Header.tsx  SystemStatus.tsx
src/integrations/: cnpj_adapter.py
tests/: conftest.py  test_api.py  test_api_leads.py  test_cnpj_service.py  test_integracao_cnpj.py  test_integrations.py  test_services.py
tests/api/v1/: test_status.py
tests/integration/: test_auth_router.py  test_cliente_service.py  test_inference_router.py  test_lead_service.py  test_security_integration.py  test_usuario_repository.py
tests/unit/: test_leads_schemas.py  test_main.py  test_phi3_handler.py  test_security.py
(+43 files in other folders)
