[tool.poetry]
name = "aurora-platform"
version = "0.1.0"
description = "Plataforma Aurora - IA integrada com GCP e NLP"
authors = ["Seu Nome <seu@email.com>"]
packages = [{ include = "aurora_platform", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.49.0"
torch = { version = "^2.2.0", source = "pytorch" } # ou usar "--index-url" no pip
accelerate = "^0.29.0"
sentencepiece = "^0.2.0"
sqlmodel = "^0.0.18"
psycopg2-binary = "^2.9.10"
google-cloud-aiplatform = "^1.100.0"
python-dotenv = "^1.1.1"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
gunicorn = "^22.0.0"
dynaconf = {extras = ["toml"], version = "^3.2.5"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyyaml = "^6.0.1"
qrcode = {extras = ["pil"], version = "^7.4.2"}

[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
flake8 = "^7.1.0"
bandit = "^1.7.9"
mypy = "^1.11.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"